--- a/style.css
+++ b/style.css
@@ -113,11 +113,12 @@ html {
      }
 
      h1, h2 {
-        font-size: 35px;
+        font-size: 40px;
+        margin-bottom: -5px;
      }
 
      .description p {
-        margin-top: 8px;
+        margin-top: 25px;
      }
 
      .flex-container {
